--- a/src/template.html
+++ b/src/template.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Kode+Mono">
+
     <title>n335t3r</title>
 </head>
 
 
 <body>
-    
+    <header id="header">
+        <div id="nameTag" class="nameTag"></div>
+        <nav id="nav"></nav>
+    </header>
 </body>
 </html>
