--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Kode+Mono">
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Sergej+Lebedev">
 
     <title>n335t3r</title>
 </head>
@@ -13,8 +15,37 @@
 
 <body>
     <header id="header">
-        <div id="nameTag" class="nameTag"></div>
-        <nav id="nav"></nav>
+        <div id="neester" class="neester">
+            <h1 id="name1" class="name1">n335t3r</h1>
+            <div id="def1" class="def11">
+                <h5 id="defArt1" class="defArt1">/knee-stir/ (?):</h5>
+                <p id="cap1" class="cap1"> semantics and etymology unknown</p>
+           </div>
+        </div>
+
+        <h4 id="aka" class="aka">a.k.a</h4>
+
+        <div id="anthony" class="anthony">
+            <div id="name2" class="name2">
+                    <h2 id="first" class="first">Anthony</h2>
+                    <h2 id="last" class="last">Horner</h2>
+            </div>
+        
+            <div id="def2" class="def2">
+                <h5 id="defArt2" class="defArt2">/kan-de-diht/ (noun):</h5>
+                <p id="cap2" class="cap2">one who seeks web dev employment</p>
+            </div>
+       </div>
     </header>
+
+    <div id="mobileDef" class="mobileDef"></div>
+
+    <nav id="nav">
+        <ul id="sitePages" class="sitePages">
+            <li id="home" class="home"><button id="homeBtn" class="homeBtn">home</button></li>
+            <li id="about" class="about"><button id="aboutBtn" class="aboutBtn">about</button></li>
+            <li id="blog" class="blog"><button id="blogBtn" class="blogBtn">blog</button></li>
+        </ul>
+    </nav>
 </body>
 </html>
