header scrapped. start from new

--- a/src/template.html
+++ b/src/template.html
@@ -4,41 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Kode+Mono">
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Sergej+Lebedev">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Anta&family=Kode+Mono:wght@400..700&display=swap');
+    </style>
 
     <title>n335t3r</title>
 </head>
 
 
+
 <body>
     <header id="header">
-        <div id="neester" class="neester">
-            <h1 id="name1" class="name1">n335t3r</h1>
-            <div id="def1" class="def11">
-                <h5 id="defArt1" class="defArt1">/knee-stir/ (?):</h5>
-                <p id="cap1" class="cap1"> semantics and etymology unknown</p>
-           </div>
-        </div>
-
-        <h4 id="aka" class="aka">a.k.a</h4>
-
-        <div id="anthony" class="anthony">
-            <div id="name2" class="name2">
-                    <h2 id="first" class="first">Anthony</h2>
-                    <h2 id="last" class="last">Horner</h2>
-            </div>
-        
-            <div id="def2" class="def2">
-                <h5 id="defArt2" class="defArt2">/kan-de-diht/ (noun):</h5>
-                <p id="cap2" class="cap2">one who seeks web dev employment</p>
-            </div>
-       </div>
+        <h1 id="nametag" class="nametag"></h1>
     </header>
-
-    <div id="mobileDef" class="mobileDef"></div>
 
     <nav id="nav">
         <ul id="sitePages" class="sitePages">
