header complete with profile photo, nametag content (& cypher functionality), & nav

--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,14 @@
 
 <body>
     <header id="header">
-        <h1 id="nametag" class="nametag"></h1>
+        <div id="profContainer" class="profContainer"></div>
+        <div id="namespace" class="namespace">
+            <h1 id="nametag" class="nametag"></h1>
+            <div id="subline" class="subline">
+                <h5 id="aka" class="aka">aka</h5>
+                <h3 id="anthony" class="anthony">Anthony Horner</h3>
+            </div>
+        </div>
     </header>
 
     <nav id="nav">
@@ -27,5 +34,6 @@
         </ul>
     </nav>
 
+    <div id="content" class="content"></div>
 </body>
 </html>
