--- a/src/template.html
+++ b/src/template.html
@@ -35,5 +35,11 @@
     </nav>
 
     <div id="content" class="content"></div>
+
+    <div id="socials" class="socials">
+        <div id="gitContainer" class="gitContainer"><a href="https://github.com/N335T3R" id="git"></a></div>
+        <div id="kofiContainer" class="kofiContainer"><a href="https://ko-fi.com/n335t3r" id="kofi"></a></div>
+        <div id="instaContainer" class="instaContainer"><a href="https://www.instagram.com/anthonyhorner/" id="insta"></a></div>
+    </div>
 </body>
 </html>
