--- a/src/template.html
+++ b/src/template.html
@@ -37,9 +37,10 @@
     <div id="content" class="content"></div>
 
     <div id="socials" class="socials">
-        <div id="gitContainer" class="gitContainer"><a href="https://github.com/N335T3R" id="git"></a></div>
-        <div id="kofiContainer" class="kofiContainer"><a href="https://ko-fi.com/n335t3r" id="kofi"></a></div>
-        <div id="instaContainer" class="instaContainer"><a href="https://www.instagram.com/anthonyhorner/" id="insta"></a></div>
+        <div id="git" class="git"></div>
+        <div id="kofi" class="kofi"></div>
+        <div id="insta" class="insta"></div>
+        <div id="goodreads" class="goodreads"></div>
     </div>
 </body>
 </html>
