links added to socials; page template looking good

--- a/src/template.html
+++ b/src/template.html
@@ -37,10 +37,10 @@
     <div id="content" class="content"></div>
 
     <div id="socials" class="socials">
-        <div id="git" class="git"></div>
-        <div id="kofi" class="kofi"></div>
-        <div id="insta" class="insta"></div>
-        <div id="goodreads" class="goodreads"></div>
+        <a href="https://github.com/N335T3R"><div id="git" class="git"></div></a>
+        <a href="https://ko-fi.com/n335t3r"><div id="kofi" class="kofi"></div></a>
+        <a href="https://www.instagram.com/anthonyhorner/"><div id="insta" class="insta"></div></a>
+        <a href="https://www.goodreads.com/user/show/5076255-n335t3r"><div id="goodreads" class="goodreads"></div></a>
     </div>
 </body>
 </html>
