page load functionality added; currently filling in page content

--- a/src/template.html
+++ b/src/template.html
@@ -41,6 +41,7 @@
         <a href="https://ko-fi.com/n335t3r"><div id="kofi" class="kofi"></div></a>
         <a href="https://www.instagram.com/anthonyhorner/"><div id="insta" class="insta"></div></a>
         <a href="https://www.goodreads.com/user/show/5076255-n335t3r"><div id="goodreads" class="goodreads"></div></a>
+        <a href="https://www.linkedin.com/in/anthony-horner-b97505153/"><div id="linkedIn" class="linkedIn"></div></a>
     </div>
 </body>
 </html>
