--- a/src/template.html
+++ b/src/template.html
@@ -16,7 +16,7 @@
 
 <body>
     <header id="header">
-        <a href="https://en.wikipedia.org/wiki/Vigen%C3%A8re_cipher"><div id="profContainer" class="profContainer"></div></a>
+        <a href="https://en.wikipedia.org/wiki/Vigen%C3%A8re_cipher" target="_blank"><div id="profContainer" class="profContainer"></div></a>
         <div id="namespace" class="namespace">
             <h1 id="nametag" class="nametag"></h1>
             <div id="subline" class="subline">
