weatherAPI added to header; further styling for later

--- a/src/template.html
+++ b/src/template.html
@@ -24,6 +24,15 @@
                 <h3 id="anthony" class="anthony">Anthony Horner</h3>
             </div>
         </div>
+
+        <div id="weatherDiv" class="weatherDivHide">
+            <h4 id="temp" class="temp"></h1>
+            <h5 id="condition" class="condition"></h5>
+            <div id="iconDiv" class="iconDiv">
+                <img alt="icon" id="weatherIcon" class="weatherIcon">
+            </div>
+            <p id="city" class="city"></h5>
+        </div>
     </header>
 
     <nav id="nav">
