Menu links destroyed and replaced with links to TOP projects. 2 social links destroyed

--- a/src/template.html
+++ b/src/template.html
@@ -38,8 +38,9 @@
     <nav id="nav">
         <ul id="sitePages" class="sitePages">
             <li id="home" class="home"><button id="homeBtn" class="homeBtn">home</button></li>
-            <li id="about" class="about"><button id="aboutBtn" class="aboutBtn">about</button></li>
-            <li id="blog" class="blog"><button id="blogBtn" class="blogBtn">blog</button></li>
+            <li id="tic-tac-toe" class="tic-tac-toe"><button id="tic-tac-toe-btn" class="tic-tac-toe-btn"><a href="http://n335t3r.github.io/tic-tac-toe" target="_blank">tic-tac-toe</a></button></li>
+            <li id="restaurant" class="restaurant"><button id="restaurant-btn" class="restaurant-btn"><a href="http://n335t3r.github.io/restaurant" target="_blank">restaurant project</a></button></li>
+            <li id="library" class="library"><button id="library-btn" class="library-btn"><a href="https://n335t3r.github.io/library" target="_blank">library project</a></button></li>
         </ul>
     </nav>
 
@@ -47,10 +48,10 @@
 
     <div id="socials" class="socials">
         <a href="https://github.com/N335T3R"><div id="git" class="git"></div></a>
-        <a href="https://ko-fi.com/n335t3r"><div id="kofi" class="kofi"></div></a>
+        <!-- <a href="https://ko-fi.com/n335t3r"><div id="kofi" class="kofi"></div></a> -->
         <a href="https://www.instagram.com/anthonyhorner/"><div id="insta" class="insta"></div></a>
         <a href="https://www.goodreads.com/user/show/5076255-n335t3r"><div id="goodreads" class="goodreads"></div></a>
-        <a href="https://www.linkedin.com/in/anthony-horner-b97505153/"><div id="linkedIn" class="linkedIn"></div></a>
+        <!-- <a href="https://www.linkedin.com/in/anthony-horner-b97505153/"><div id="linkedIn" class="linkedIn"></div></a> -->
     </div>
 </body>
 </html>
