added link to to-do project

--- a/src/template.html
+++ b/src/template.html
@@ -39,8 +39,9 @@
         <ul id="sitePages" class="sitePages">
             <li id="home" class="home"><button id="homeBtn" class="homeBtn">home</button></li>
             <li id="tic-tac-toe" class="tic-tac-toe"><button id="tic-tac-toe-btn" class="tic-tac-toe-btn"><a href="http://n335t3r.github.io/tic-tac-toe" target="_blank">tic-tac-toe</a></button></li>
-            <li id="restaurant" class="restaurant"><button id="restaurant-btn" class="restaurant-btn"><a href="http://n335t3r.github.io/restaurant" target="_blank">restaurant project</a></button></li>
-            <li id="library" class="library"><button id="library-btn" class="library-btn"><a href="https://n335t3r.github.io/library" target="_blank">library project</a></button></li>
+            <li id="restaurant" class="restaurant"><button id="restaurant-btn" class="restaurant-btn"><a href="http://n335t3r.github.io/restaurant" target="_blank">restaurant</a></button></li>
+            <li id="to-do" class="to-do"><button id="to-do-btn" class="to-do-btn"><a href="https://n335t3r.github.io/to-do">to-do</a></button></li>
+            <li id="library" class="library"><button id="library-btn" class="library-btn"><a href="https://n335t3r.github.io/library" target="_blank">library</a></button></li>
         </ul>
     </nav>
 
